# turret_bot

./: .pre-commit-config.yaml  README.md
turretbot_bringup/: CMakeLists.txt  package.xml
turretbot_bringup/config/: turretbot_controllers.yaml
turretbot_bringup/launch/: turretbot_bringup.launch.py
turretbot_description/: CMakeLists.txt  package.xml
turretbot_description/config/: turretbot_description.rviz
turretbot_description/launch/: view_turretbot.launch.py
turretbot_description/ros2_control/: turretbot_actuators.ros2_control.xacro
turretbot_description/urdf/: turretbot.urdf.xacro  turretbot_description.urdf.xacro
turretbot_simulated_hardware/: CMakeLists.txt  package.xml  turretbot_simulated_hardware.xml
turretbot_simulated_hardware/include/turretbot_simulated_hardware/: turretbot_actuator.hpp  visibility.h
turretbot_simulated_hardware/src/: turretbot_actuator.cpp
